<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2015-present Amazon.com, Inc. or its affiliates. All Rights Reserved.

Licensed under the Amazon Software License (the "License");
you may not use this file except in compliance with the License.
A copy of the License is located at

    https://aws.amazon.com/asl/

or in the "license" file accompanying this file. This file is distributed
on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
express or implied. See the License for the specific language governing
permissions and limitations under the License.
-->
<resources>
    <string name="mini_browser" translatable="false">Fire App Builder</string>
    <string name="cursor_mode_description">Use Cursor Mode</string>
    <string name="turn_off_cursor">Turn Off Cursor</string>
    <string name="menu_description">Options Menu</string>
    <string name="back_description">Previous Page</string>
    <string name="forward_description">Next Page</string>
    <string name="reload_description">Refresh</string>
    <string name="close_description">Close/Done</string>
    <string name="mouse_instructions">
        Use <b>UP/DOWN/LEFT/RIGHT</b> to
        move cursor and scroll at screen edges,
        press <b>SELECT</b> to click.
    </string>
    <string name="directional_instructions">
        Use <b>UP/DOWN/LEFT/RIGHT</b> to
        navigate focus, press <b>SELECT</b> to click.
    </string>
</resources>
