<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2015-present Amazon.com, Inc. or its affiliates. All Rights Reserved.

Licensed under the Amazon Software License (the "License");
you may not use this file except in compliance with the License.
A copy of the License is located at

    https://aws.amazon.com/asl/

or in the "license" file accompanying this file. This file is distributed
on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
express or implied. See the License for the specific language governing
permissions and limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="474dp"
            android:background="#242628"
            android:orientation="vertical">

        <com.amazon.android.webkit.AmazonWebView
                android:id="@+id/calypso_webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

        <ProgressBar
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="7.5dp"
                android:progressDrawable="@drawable/progress_bar" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/information_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@android:color/transparent" >

        <TextView
                android:id="@+id/directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/directional_instructions"
                android:textSize="12sp"
                android:textColor="#d0d0d0"
                android:fontFamily="helvetica_ne_lt_45_lt" />

        <LinearLayout
                android:id="@+id/remote_prompts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

            <ImageView
                    style="@style/ButtonImage"
                    android:contentDescription="@string/back_description"
                    android:src="@drawable/hurley_hint_rewind" />

            <TextView
                    style="@style/ButtonPrompt"
                    android:text="@string/back_description" />

            <ImageView
                    style="@style/ButtonImage"
                    android:contentDescription="@string/forward_description"
                    android:src="@drawable/hurley_hint_ff" />

            <TextView
                    style="@style/ButtonPrompt"
                    android:text="@string/forward_description" />

            <ImageView
                    style="@style/ButtonImage"
                    android:contentDescription="@string/close_description"
                    android:src="@drawable/hurley_hint_back" />

            <TextView
                    style="@style/ButtonPrompt"
                    android:text="@string/close_description" />

            <ImageView
                    style="@style/ButtonImage"
                    android:contentDescription="@string/reload_description"
                    android:src="@drawable/hurley_hint_play_pause" />

            <TextView
                    style="@style/ButtonPrompt"
                    android:text="@string/reload_description" />

            <ImageView
                    style="@style/ButtonImage"
                    android:contentDescription="@string/cursor_mode_description"
                    android:src="@drawable/hurley_hint_menu" />

            <TextView
                    style="@style/ButtonPrompt"
                    android:id="@+id/menu_description"
                    android:text="@string/cursor_mode_description"
                    android:layout_marginEnd="0dp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
